Fixed: Scroll issues on mobile?

--- a/css/_variables.scss
+++ b/css/_variables.scss
@@ -5,10 +5,11 @@ $background: #f6f6f6;
 
 // Bootstrap vars
 $screen-xs-max: 767px;
+$screen-sm-min: $screen-xs-max + 1;
 $table-bg: transparent;
-$line-height-computed: 20px;
-$table-cell-padding: 8px;
 $line-height-base: 20px;
+$line-height-computed: $line-height-base;
+$table-cell-padding: 8px;
 $table-border-color: #ddd;
 $table-condensed-cell-padding: 5px;
 $table-bg-accent: #f9f9f9;
