--- a/css/bootstrap-table.scss
+++ b/css/bootstrap-table.scss
@@ -15,12 +15,9 @@ th {
 .table {
   width: 100%;
   margin-bottom: $line-height-computed;
-  > thead,
-  > tbody,
-  > tfoot {
+  > thead, > tbody, > tfoot {
     > tr {
-      > th,
-      > td {
+      > th, > td {
         padding: $table-cell-padding;
         line-height: $line-height-base;
         vertical-align: top;
@@ -36,8 +33,7 @@ th {
   > colgroup + thead,
   > thead:first-child {
     > tr:first-child {
-      > th,
-      > td {
+      > th, > td {
         border-top: 0;
       }
     }
@@ -52,12 +48,9 @@ th {
 }
 
 .table-condensed {
-  > thead,
-  > tbody,
-  > tfoot {
+  > thead, > tbody, > tfoot {
     > tr {
-      > th,
-      > td {
+      > th, > td {
         padding: $table-condensed-cell-padding;
       }
     }
@@ -66,19 +59,15 @@ th {
 
 .table-bordered {
   border: 1px solid $table-border-color;
-  > thead,
-  > tbody,
-  > tfoot {
+  > thead, > tbody, > tfoot {
     > tr {
-      > th,
-      > td {
+      > th, > td {
         border: 1px solid $table-border-color;
       }
     }
   }
   > thead > tr {
-    > th,
-    > td {
+    > th, > td {
       border-bottom-width: 2px;
     }
   }
@@ -86,8 +75,7 @@ th {
 
 .table-striped {
   > tbody > tr:nth-child(odd) {
-    > td,
-    > th {
+    > td, > th {
       background-color: $table-bg-accent;
     }
   }
@@ -95,8 +83,7 @@ th {
 
 .table-hover {
   > tbody > tr:hover {
-    > td,
-    > th {
+    > td, > th {
       background-color: $table-bg-hover;
     }
   }
@@ -109,8 +96,7 @@ table col[class*="col-"] {
 }
 
 table {
-  td,
-  th {
+  td, th {
     &[class*="col-"] {
       position: static;
       float: none;
@@ -130,12 +116,9 @@ table {
     -webkit-overflow-scrolling: touch;
     > .table {
       margin-bottom: 0;
-      > thead,
-      > tbody,
-      > tfoot {
+      > thead, > tbody, > tfoot {
         > tr {
-          > th,
-          > td {
+          > th, > td {
             white-space: nowrap;
           }
         }
@@ -143,25 +126,19 @@ table {
     }
     > .table-bordered {
       border: 0;
-      > thead,
-      > tbody,
-      > tfoot {
+      > thead, > tbody, > tfoot {
         > tr {
-          > th:first-child,
-          > td:first-child {
+          > th:first-child, > td:first-child {
             border-left: 0;
           }
-          > th:last-child,
-          > td:last-child {
+          > th:last-child, > td:last-child {
             border-right: 0;
           }
         }
       }
-      > tbody,
-      > tfoot {
+      > tbody, > tfoot {
         > tr:last-child {
-          > th,
-          > td {
+          > th, > td {
             border-bottom: 0;
           }
         }
