--- a/css/custom.scss
+++ b/css/custom.scss
@@ -30,8 +30,8 @@ code {
   font-size: .9em;
   padding: 2px;
   line-height: $line-height-base + 6; // 2 top and bottom plus 1 extra for top and bottom
-  white-space: nowrap;
   border-radius: 3px;
+  @media (min-height: $screen-sm-min) { white-space: nowrap; }
 }
 
 ul, ol {
